Mark top estimate for bottom-aligned OOFs as bogus when fragmented.

As the code already points out, the block-start estimate for block-end
aligned out-of-flow positioned objects cannot be determined without
laying out. Make sure that we really lay out.

Bug: 921546
Change-Id: Id49b7b846886070ce3e49e0220a7b6378e1f9d6a
Reviewed-on: https://chromium-review.googlesource.com/c/1409442
Commit-Queue: Emil A Eklund <eae@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622492}
Former-commit-id: c9815df2e17e7cc61e622a402ec4c7af6d1367c2